--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     
     <meta name="author" content="Salvador González Rico">
 
+        <meta name="google-site-verification" content="jTLNkK6Exl22cDrCxhg2vtjT75xMw1SXlNCa-Z21qv0" />
     
 
 </head>
