--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div class="links">
 
-            <a href="https://github.com/tuusuario" target="_blank">
+            <a href="https://github.com/Salva-gonzale?tab=repositories" target="_blank">
 
                 <img src="github_logo.webp" alt="GitHub">
 
