--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Mi Página Personal</title>
+    <title>Salvador González Rico Personal Web</title>
 
     <link rel="stylesheet" href="página_principal.css">
 
@@ -39,7 +39,7 @@
 
     <div class="container">
         
-        <img src="Foto Curriculum.jpeg" alt="Mi Foto" class="perfil"> 
+        <img src="foto curriculum2.jpeg" alt="Mi Foto" class="perfil"> 
 
         <h1>Salvador González Rico</h1>
 
