--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
             </a>
 
-            <a href="https://drive.google.com/file/d/1G5z5UPM0UMWIcSCDOOZrx--PsXsxPNAR/view?usp=drive_link" target="_blank">
+            <a href="https://drive.google.com/file/d/1Vevzasmd6muol-xBWacu0Z4oSJOOJiGc/view?usp=sharing" target="_blank">
 
                 <img src="curriculum_image.webp" alt="Curriculum">
 
